first commit - layout module set, work on messaging

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,30 @@
-<app-navbarzone></app-navbarzone>
-<app-asidezone></app-asidezone>
-<app-contentzone></app-contentzone>
-<app-footerzone></app-footerzone>
+<app-template></app-template>
+<!--
+  
+<nb-layout>
+  <nb-layout-header fixed>Company Name</nb-layout-header>
+
+
+  <nb-layout-footer>Here the footer</nb-layout-footer>
+
+
+  <nb-layout-column>
+    Page Content <button nbButton>Hello World</button>
+    <br>
+    <h5>Listes des messages from app</h5>
+
+    <app-messages>
+
+    </app-messages>
+
+
+
+  </nb-layout-column>
+
+
+</nb-layout>
+
+
+<nb-sidebar>Sidebar Content</nb-sidebar>
+
+-->
