--- a/src/app/layout/asidezone/asidezone.component.html
+++ b/src/app/layout/asidezone/asidezone.component.html
@@ -1,1 +1,15 @@
-<p>asidezone works!</p>
+<!-- <nb-card size="medium">
+  <nb-card-header>
+    <div (click)="defineZoneTitle()">{{ zoneTitle }}</div>
+  </nb-card-header>
+
+  <p *ngFor="let message of messages">{{ message.title }}</p>
+  <nb-list>
+
+    <nb-list-item *ngFor="let message of messages">
+
+    </nb-list-item>
+  </nb-list>
+</nb-card> -->
+
+<app-messages></app-messages>
