--- a/src/app/messaging/messages/messages.component.html
+++ b/src/app/messaging/messages/messages.component.html
@@ -2,13 +2,6 @@
 <!-- <app-asidezone [messages]="messages">
   <app-asidezone> -->
 
-<nb-card size="medium">
-  <nb-card-header>
-    List des messages
-  </nb-card-header>
+<h3>In the component messages</h3>
 
-  <nb-list>
-    <nb-list-item *ngFor="let message of messages">{{ message.title }} - <span (mouseover)="uppercaseTitle()"> X </span>
-    </nb-list-item>
-  </nb-list>
-</nb-card>
+j'adore les messages
