--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,27 @@
-<app-template></app-template>
-<!--
-  
-<nb-layout>
-  <nb-layout-header fixed>Company Name</nb-layout-header>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <h2>Header</h2>
+    </div>
+  </div>
+  <div class="row min-vh-100">
+    <div class="col-2 sidebar">
+      <h2>Sidebar</h2>
+      <ul class="menu">
+        <li><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active" href="">dashboard</a></li>
+        <li><a [routerLink]="['/mailing']" routerLinkActive="router-link-active" href="">mailing</a></li>
+        <li><a href="#">page 3</a></li>
+      </ul>
+    </div>
+    <div class="col-10">
+      <h2>content</h2>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 
-
-  <nb-layout-footer>Here the footer</nb-layout-footer>
-
-
-  <nb-layout-column>
-    Page Content <button nbButton>Hello World</button>
-    <br>
-    <h5>Listes des messages from app</h5>
-
-    <app-messages>
-
-    </app-messages>
-
-
-
-  </nb-layout-column>
-
-
-</nb-layout>
-
-
-<nb-sidebar>Sidebar Content</nb-sidebar>
-
--->
+  <footer class="row fixed-bottom">
+    <div class="col min-vh-10">
+      <h2>Footer</h2>
+    </div>
+  </footer>
+</div>
